<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all_spells">

    <fragment
        android:id="@+id/nav_all_spells"
        android:name="com.example.myapplication.fragment.SpellsAllFragment"
        android:label="@string/menu_all_spells"
        tools:layout="@layout/fragment_spells_all" />

    <fragment
        android:id="@+id/nav_favorite_spells"
        android:name="com.example.myapplication.fragment.SpellsFavoriteFragment"
        android:label="@string/menu_favorite_spells"
        tools:layout="@layout/activity_favorite" />

    <fragment
        android:id="@+id/nav_all_monsters"
        android:name="com.example.myapplication.fragment.MonstersAllFragment"
        android:label="@string/menu_all_monsters"
        tools:layout="@layout/fragment_spells_all" />

    <fragment
        android:id="@+id/nav_favorite_monsters"
        android:name="com.example.myapplication.fragment.MonstersFavoriteFragment"
        android:label="@string/menu_favorite_monsters"
        tools:layout="@layout/activity_favorite" />
</navigation>