<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_spells"
            android:icon="@drawable/ic_menu_spells_all"
            android:textColor="@color/textColor"
            android:title="@string/menu_all_spells" />

        <item
            android:id="@+id/nav_all_monsters"
            android:icon="@drawable/ic_menu_monster_all"
            android:textColor="@color/textColor"
            android:checkable="true"
            android:title="@string/menu_all_monsters" />

        <item
            android:id="@+id/nav_master_help"
            android:icon="@drawable/ic_menu_master_help"
            android:textColor="@color/textColor"
            android:title="@string/menu_master_help" />
    </group>
</menu>
